--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
                                     <li class="nav-item dropdown">
                                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pages</a>
                                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                            <a class="dropdown-item" href="index.html">Home</a>
-                                            <a class="dropdown-item" href="about-me.html">About</a>
-                                            <a class="dropdown-item" href="portfolio.html">Portfolio</a>
-                                            <a class="dropdown-item" href="blog.html">Blog</a>
-                                            <a class="dropdown-item" href="contact.html">Contact</a>
-                                            <a class="dropdown-item" href="elements.html">Elements</a>
+                                            <a class="dropdown-item" href="#">Home</a>
+                                            <a class="dropdown-item" href="#">About</a>
+                                            <a class="dropdown-item" href="#">Portfolio</a>
+                                            <a class="dropdown-item" href="#">Blog</a>
+                                            <a class="dropdown-item" href="#">Contact</a>
+                                            <a class="dropdown-item" href="#">Elements</a>
                                         </div>
                                     </li>
                                     <li class="nav-item">
