--- a/index.html
+++ b/index.html
@@ -78,16 +78,16 @@
                                         </div>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="about-me.html">About</a>
+                                        <a class="nav-link" href="#">About</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="portfolio.html">Portfolio</a>
+                                        <a class="nav-link" href="#">Portfolio</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="blog.html">Blog</a>
+                                        <a class="nav-link" href="#">Blog</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="contact.html">contact</a>
+                                        <a class="nav-link" href="#">contact</a>
                                     </li>
                                 </ul>
                                 <!-- Search Form -->
